--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,9 +7,13 @@ environment:
   sdk: '>=3.4.3 <4.0.0'
 
 dependencies:
-  firebase_core: ^3.1.0
+  
   flutter:
     sdk: flutter
+  firebase_core: ^3.0.0
+  firebase_auth: ^5.1.0
+  firebase_database: ^11.0.1
+
 
 dev_dependencies:
   flutter_test:
